--- a/Browserdetails.html
+++ b/Browserdetails.html
@@ -12,9 +12,6 @@
         document.write(navigator.appVersion+"<br>");
         document.write(navigator.appCodeName+"<br>");
         <h1>"Heading1"</h1>
-            
-
-
-
+        </script>
 </body>
 </html>
